overflow fix

--- a/blocks/aboutus/aboutus.css
+++ b/blocks/aboutus/aboutus.css
@@ -50,6 +50,7 @@
 }
 
 .aboutus__blocks__3 {
+    margin-bottom: 40px;
     max-width: 700px;;
     text-align: center;
     font-size: 32px;
@@ -64,6 +65,7 @@
 }
 
 .aboutus__blocks__4 {
+    margin-bottom: 40px;
     max-width: 700px;
     text-align: center;
     font-size: 32px;
