--- a/blocks/portfolio/portfolio.css
+++ b/blocks/portfolio/portfolio.css
@@ -57,7 +57,7 @@
 .portfolio__blocks__logo {
     width: 60%;
     margin: 0 20%;
-    height: 300px;
+    height: 480px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 45% 45%;
